# django-user-sessions

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTORS.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: release.yml  test.yml
.tx/: config
demo/demo/: settings.py  urls.py
demo/templates/extended_sessions/: session_list.html
docs/: Makefile  conf.py  index.rst  installation.rst  reference.rst  release-notes.rst  testing.rst  usage.rst
example/: middleware.py  settings.py  urls.py  wsgi.py
example/templates/: _base.html
example/templates/user_sessions/: session_list.html
extended_sessions/: admin.py  middleware.py  models.py  views.py
extended_sessions/backends/: db.py
extended_sessions/templatetags/: extended_sessions.py
tests/: Dockerfile  generate_mmdb.pl  settings.py  test_admin.py  test_city.mmdb  test_client.py  test_commands.py  test_country.mmdb  test_middleware.py  test_models.py  test_sessionstore.py  test_template_filters.py  test_views.py  tests.py  urls.py  utils.py
user_sessions/: __init__.py  admin.py  apps.py  middleware.py  models.py  testclient.py  urls.py  views.py
user_sessions/backends/: cache.py  cached_db.py  db.py
user_sessions/locale/ar/LC_MESSAGES/: django.mo  django.po
user_sessions/locale/de/LC_MESSAGES/: django.mo  django.po
user_sessions/locale/en/LC_MESSAGES/: django.mo  django.po
user_sessions/locale/he/LC_MESSAGES/: django.mo  django.po
user_sessions/locale/it/LC_MESSAGES/: django.mo  django.po
user_sessions/locale/nl/LC_MESSAGES/: django.mo  django.po
user_sessions/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
user_sessions/locale/ru/LC_MESSAGES/: django.mo  django.po
user_sessions/locale/zh_CN/LC_MESSAGES/: django.mo  django.po
user_sessions/management/commands/: clearsessions.py  migratesessions.py  sessions_to_usersessions.py
user_sessions/migrations/: 0001_initial.py  0002_auto_20151208_1536.py  0003_auto_20161205_1516.py  0004_alter_session_expire_date.py  0004_session_created.py  0004_session_namespace.py  __init__.py
user_sessions/templates/user_sessions/: _base.html  session_list.html
user_sessions/templatetags/: user_sessions.py
user_sessions/utils/: tests.py
